@@ -84,7 +84,7 @@ class TestCommand(ResourcedTestCase):
         Cases('failing').run(inserter)
         Cases('ok').run(inserter)
         inserter.stopTestRun()
-        self.assertEqual(1, cmd.execute())
+        self.assertEqual(0, cmd.execute())
         self.assertEqual(1, len(ui.outputs))
         self.assertEqual('stream', ui.outputs[0][0])
         self.assertThat(ui.outputs[0][1], DocTestMatches("""...test: ...failing
